--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: ./bin
     volumes:
-      - ${APP_ROOT-./laravel-5.3}:/var/www/html:rw
-      - ${VHOST_CONFIG-./000-default.conf}:/etc/apache2/sites-enabled/000-default.conf
+      - ${APP_ROOT-./master}:/var/www/html:rw
+      - ${VHOST_CONFIG-./config/000-default.conf}:/etc/apache2/sites-enabled/000-default.conf
     ports:
-      - 9000:80
+      - 8080:80
