[ADD] Install mcrypt extensions.

--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,3 +1,8 @@
 FROM php:5.6-apache
 
+RUN apt-get update \
+    && apt-get install libmcrypt-dev --yes
+
+RUN docker-php-ext-install mcrypt
+
 RUN a2enmod rewrite headers
