[UPDATE] Add Mysql.

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 APP_ROOT=./master
 VHOST_CONFIG=./config/000-default.conf
+MYSQL_ROOT_PASSWORD=rootroot
+MYSQL_DATABASE=dockertest
+MYSQL_USER=root
+MYSQL_PASSWORD=rootroot
