[FIX] Wrong dependency.
- Add composer and its dependencies to the Docker image.

--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,9 +1,15 @@
 FROM php:5.6-apache
 
 RUN apt-get update \
-    && apt-get install libmcrypt-dev --yes
+    && apt-get install git libmcrypt-dev libzip-dev --yes
 
-RUN docker-php-ext-install mcrypt \
-    && docker-php-ext-install mysqli pdo pdo_mysql
+RUN docker-php-ext-install \
+    mysqli \
+    pdo \
+    pdo_mysql \
+    zip \
+    mcrypt
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 RUN a2enmod rewrite headers
